# Juju

./: .gitignore  README.md  todo
2020-2023/alpaca-lisp/test/: CMakeLists.txt
2020-2023/alpaca-lisp/test/basic/: test1.cpp
2020-2023/cpp_template-lambda-calculus/: CMakeLists.txt
2020-2023/cpp_template-lambda-calculus/demo/: CMakeLists.txt  demo3.cc
2020-2023/cpp_template-lambda-calculus/tml/: base.h  tml.h  types.h
Ionian/: README.md
Scripts/: .gitignore
agda_1-cat/: Base.agda
agda_cat/: Base.agda  Category.agda
alpaca-lisp/: CMakeLists.txt  README.md
alpaca-lisp/include/: parse.h
alpaca-lisp/src/: parse.cpp
apl_image-processing/: README.md  histeq.apl
apl_meta-brainfuck/: ;  README.md  bf.apl  bf.aplf
batchEmail/: Main.hs  Test.hs  batchEmail.cabal
batchEmail/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
batchEmail/example/: headers-and-holes  template
bidirectional-typechecker/: README.md  bidirectional-typechecker.cabal
c_regex_statemachine/: README.md  regex.c  test.c
closure-conversion/: closure-conversion.cabal
commonlisp_graph-jam/: scc-kosaraju.cl  tank-problem.cl  topological-sort.cl
commonlisp_graph-reduction/: combinator.lisp  graph-reduction.asd  graph.lisp
cpp_any_and_exitential_type/: README.md
cpp_bitwise/: bitwise.cc
cpp_bpf/: README.md
cpp_destructive-move/: README.md  destructive_move.cc
cpp_doodle-with-ppm/: README.md
cpp_gc/: .clang-format  README.md  allocation.cpp  def.h  imp.cpp  imp.h  impl.h  imppp.h
cpp_gdb_notes/: P1.md
cpp_memlayout/: CHANGELOG.md  README.md
cpp_monotonic-queue-iterator/: monotonic-iter.cc  monotonic-iter.hpp
cpp_os/: confirm.sh
cpp_polyvalue-with-typeerasure-and-ducktyping/: README.md  expr.cc
cpp_system-programming/: README.md  abi.cc  abi.s  demangle.cc  gsl.cc  unix1_fork.cc  unix3_ipc_pipe.cc  unix5_exec.cc  unix6_output_redirection.cc  unix7_ipc_signals.cc
cpp_template-lambda-calculus/: README.md
cpp_template-list/: template-list.hpp
cpp_traditional-parsing-for-pl0/: README.md  ll_recursive_decent.cc  lr1_shift_reduce.cc
cps-transform/: CHANGELOG.md  cps-transform.cabal
doodle-with-ppm/: CMakeLists.txt  mandelbrot.h  mandelbrot.txt
dsl-sharing/: CHANGELOG.md
elm_playground/: '  app.js  elm.json  gulpfile.js  index.htm  index.html  main.js  package-lock.json  package.json
f#_algorithmW/: lang-0.sln
haskelL_ann/: ANN.hs  haskelL-ann.cabal
haskell-hindely_minler/: CHANGELOG.md  README.md  haskell-hindely-minler.cabal
haskell_algebra/: CHANGELOG.md
haskell_algebraic-eff/: CHANGELOG.md  haskell-algebraic-eff.cabal
haskell_allocator/: CHANGELOG.md  haskell-allocator.cabal
haskell_ann/: CHANGELOG.md
haskell_bidirectional-typechecker/: CHANGELOG.md  README.md  bidirectional-typechecker.cabal
haskell_busy-beaver/: busy-beaver.cabal
haskell_busy-beaver/app/: Main.hs
haskell_busy-beaver/src/: ANN.hs  Oracle.hs  TM.hs
haskell_busy-beaver/src/Data/Internal/: Volume.hs
haskell_cats/: CHANGELOG.md  haskell-cats.cabal
haskell_closure-conversion/: closure-conversion.cabal
haskell_compile-lambda/: compile-lambda.cabal
haskell_compiler-analysis/: README.md
haskell_compose_guide/: README.md  haskell-compose-guide.cabal
haskell_concurrency/: CHANGELOG.md  README.md  haskell-concurrency.cabal
haskell_cps-transform/: cps-transform.cabal
haskell_dsl/: README.md  dsl.cabal
haskell_dsl-sharing/: dsl-sharing.cabal
haskell_effs/: README.md  haskell-effs.cabal
haskell_effs/src/Control/: Control.hs  IndexedMonad.hs
haskell_effs/src/Free/: DataTypeALaCarte.hs  FAlgebra.hs  FreeMonad.hs  FreerMonad.hs  RecursionScheme.hs
haskell_effs/src/Mtl/: Cont.hs  Reader.hs
haskell_effs/src/Playground/: P1.hs
haskell_effs/src/Test/: P1.hs
haskell_effs/src/Transformers/: Class.hs  Coroutine.hs  Except.hs  Free.hs  Identity.hs  Maybe.hs  RState.hs  Reader.hs  Select.hs  State.hs  Writer.hs
haskell_fixpoint/: AdjointFunctor.hs  FixPoint.hs  MuNu.hs  README.md  YComb.hs  haskell_fixpoint_and_freemonad.cabal
haskell_fixpoint_and_freemonad/: CHANGELOG.md  README.md  haskell-fixpoint-and-freemonad.cabal
haskell_free_monad/: haskell-free-monad.cabal
haskell_frp/: CHANGELOG.md  haskell-frp.cabal
haskell_haskell99/: CHANGELOG.md  Haskell99.hs  haskell-haskell99.cabal
haskell_hore_clause_turing_machine/: CHANGELOG.md  haskell-hore-clause-turing-machine.cabal
haskell_html_template/: CHANGELOG.md  haskell-html-template.cabal
haskell_http-server/: CHANGELOG.md  haskell-http-server.cabal
haskell_imperative/: CHANGELOG.md  README.md  haskell-imperative.cabal
haskell_lens/: CHANGELOG.md  Lens.hs  haskell-lens.cabal
haskell_loop/: README.md  haskell-loop.cabal  loop-dsl.cabal
haskell_monad_base_control/: CHANGELOG.md  haskell-monad-base-control.cabal
haskell_mtl/: haskell-mtl.cabal
haskell_netpbm-handle/: :w  CHANGELOG.md  README.md  haskell-netpbm-handle.cabal
haskell_okasaki-immutable-datastructure/: haskell-okasaki-immutable-datastructure.cabal
haskell_okasaki_immutable_datastructure/: CHANGELOG.md  haskell-okasaki-immutable-datastructure.cabal
haskell_parser-combinator/: README.md
haskell_partial-evaluation/: partial-evaluation.cabal
haskell_pcomp/: haskell-pcomp.cabal
haskell_pipe/: haskell-pipe.cabal
haskell_runtime-reflection/: CloseDyn.hs  Dyn.hs  README.md  TyCon.hs  Type.hs  haskell-runtime-reflection.cabal
haskell_stream/: CHANGELOG.md
haskell_temp/: haskell-temp.cabal
haskell_tricks/: CHANGELOG.md  README.md  haskell-tricks.cabal
haskell_type-gymnastics/: haskell-type-gymnastics.cabal
haskell_type-reflection/: README.md  haskell-type-reflection.cabal
haskell_type-reflection/src/: ConfigurationProblem.hs  Reflection.hs
haskell_zippers/: README.md  haskell-zippers.cabal
hornclause-tmachine/: haskell-hore-clause-turing-machine.cabal
interpreter/: dune
koka_playground/: demo.kk  rbtree.kk
lean_group/: README.md
logic/: proof-theory.md  separation-logic.md
netbpm-animation/: demo.h  main.cc  mandelbrot.h  ppm.h  (+1 more)
(+534 files in other folders)
