cabal-version:      2.4
name:               batchEmail
version:            0.1.0.0
author:             Ailrk
maintainer:         jimmy123good@hotmail.com
extra-source-files: CHANGELOG.md

executable batchEmail
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.1.0
      , async
      , smtp-mail
      , text
      , bytestring
      , mtl
      , transformers
      , containers
      , mime-mail
--    hs-source-dirs:   app
    default-language: Haskell2010
