cabal-version:      2.4
name:               batchEmail
version:            0.1.0.0
author:             Ailrk
maintainer:         jimmy123good@hotmail.com
extra-source-files: CHANGELOG.md

executable batchEmail
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.1.0
      , HaskellNet-SSL
      , HaskellNet
      , mime-mail
      , text
      , transformers
      , containers
      , bytestring
      , data-default
      , pretty-simple
--    hs-source-dirs:   app
    default-language: Haskell2010
    -- profiling
    ghc-options:
      -rtsopts
      -prof
      -fprof-auto
    -- other-modules:
