cabal-version:      2.4
name:               haskelL-ann
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ailrk
maintainer:         jimmy123good@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskelL-ann
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      ANN
      Test

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
      , singletons
      , hmatrix
      , vector
      , MonadRandom
      , transformers
    hs-source-dirs:   .
    default-language: Haskell2010
