cabal-version:      2.4
name:               haskell-effs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ailrk
maintainer:         jimmy123good@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
      Transformers.Class
      Transformers.Identity
      Transformers.Except
      Transformers.Cont
      Transformers.RWS
      Transformers.Reader
      Transformers.Writer
      Transformers.State
      Transformers.Maybe

      Mtl.Identity
      Mtl.Except
      Mtl.Cont
      Mtl.RWS
      Mtl.Reader
      Mtl.Writer
      Mtl.State

      Control.Control

      Signatures

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
